--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "graphex"
 version = "0.1.0"
+authors = ["Mattéo Rossillol‑‑Laruelle <beatussum@protonmail.com>"]
 edition = "2024"
+description = "A small crate providing utilies to explore graph (boosted by Rayon)"
+repository = "https://github.com/beatussum/graphex"
+license = "GPL-3.0-or-later"
+keywords = ["algorithms", "graph"]
+categories = ["algorithms"]
 
 [dependencies]
