--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,12 @@ keywords = ["algorithms", "graph"]
 categories = ["algorithms"]
 
 [dependencies]
+ahash = { version = "0.8.12", optional = true }
+dashmap = { version = "6.1.0", optional = true }
+rayon = { version = "1.10.0", optional = true }
+
+[dev-dependencies]
+rand = "0.9.1"
+
+[features]
+rayon = ["dep:ahash", "dep:dashmap", "dep:rayon"]
