--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["algorithms", "graph"]
 categories = ["algorithms"]
 
 [dependencies]
-ahash = { version = "0.8.12", optional = true }
+ahash = "0.8.12"
 dashmap = { version = "6.1.0", optional = true }
 rayon = { version = "1.10.0", optional = true }
 
@@ -18,4 +18,4 @@ rayon = { version = "1.10.0", optional = true }
 rand = "0.9.1"
 
 [features]
-rayon = ["dep:ahash", "dep:dashmap", "dep:rayon"]
+rayon = ["dep:dashmap", "dep:rayon"]
