--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["algorithms"]
 
 [dependencies]
 ahash = "0.8.12"
+cfg-if = "1.0.1"
 dashmap = { version = "6.1.0", optional = true }
 rayon = { version = "1.10.0", optional = true }
 
