--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ categories = ["algorithms"]
 
 [dependencies]
 ahash = "0.8.12"
-cfg-if = "1.0.1"
 dashmap = { version = "6.1.0", optional = true }
 rayon = { version = "1.10.0", optional = true }
 
@@ -20,3 +19,7 @@ rand = "0.9.1"
 
 [features]
 rayon = ["dep:dashmap", "dep:rayon"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
