--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,15 @@ categories = ["algorithms"]
 
 [dependencies]
 ahash = "0.8.12"
-dashmap = { version = "6.1.0", optional = true }
+dashmap = { version = "6.1.0", optional = true, features = ["rayon"] }
+num-traits = { version = "0.2.19", optional = true }
 rayon = { version = "1.10.0", optional = true }
 
 [dev-dependencies]
 rand = "0.9.1"
 
 [features]
-rayon = ["dep:dashmap", "dep:rayon"]
+rayon = ["dep:dashmap", "dep:num-traits", "dep:rayon"]
 
 [package.metadata.docs.rs]
 all-features = true
